gen/grammar/delphiParser.java
// Generated from grammar/delphi.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABSTRACT=1, AND=2, ARRAY=3, AS=4, BEGIN=5, BOOLEAN=6, BREAK=7, CASE=8, 
		CHAR=9, CHR=10, CLASS=11, CONST=12, CONSTRUCTOR=13, CONTINUE=14, DESTRUCTOR=15, 
		DIV=16, DO=17, DOWNTO=18, DYNAMIC=19, ELSE=20, END=21, FALSE=22, FILE=23, 
		FOR=24, FUNCTION=25, GOTO=26, IF=27, IMPLEMENTATION=28, IN=29, INHERITED=30, 
		INTEGER=31, INTERFACE=32, IS=33, LABEL=34, MOD=35, NIL=36, NOT=37, OF=38, 
		OR=39, OVERRIDE=40, PACKED=41, PRIVATE=42, PROCEDURE=43, PROGRAM=44, PROTECTED=45, 
		PUBLIC=46, PUBLISHED=47, READ=48, READLN=49, REAL=50, RECORD=51, REPEAT=52, 
		RESULT=53, SELF=54, SET=55, SHL=56, SHR=57, STRICT=58, STRING=59, THEN=60, 
		TO=61, TRUE=62, TYPE=63, UNIT=64, UNTIL=65, USES=66, VAR=67, VIRTUAL=68, 
		WHILE=69, WITH=70, WRITE=71, WRITELN=72, XOR=73, PLUS=74, MINUS=75, STAR=76, 
		SLASH=77, ASSIGN=78, COMMA=79, SEMI=80, COLON=81, EQUAL=82, NOT_EQUAL=83, 
		LT=84, LE=85, GE=86, GT=87, LPAREN=88, RPAREN=89, LBRACK=90, LBRACK2=91, 
		RBRACK=92, RBRACK2=93, POINTER=94, AT=95, DOTDOT=96, DOT=97, IDENT=98, 
		STRING_LITERAL=99, NUM_INT=100, NUM_REAL=101, WS=102, COMMENT_1=103, COMMENT_2=104, 
		COMMENT_3=105;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_usesUnitsPart = 4, RULE_labelDeclarationPart = 5, RULE_label = 6, 
		RULE_constantDefinitionPart = 7, RULE_constantDefinition = 8, RULE_constantChr = 9, 
		RULE_constant = 10, RULE_unsignedNumber = 11, RULE_unsignedInteger = 12, 
		RULE_unsignedReal = 13, RULE_sign = 14, RULE_bool_ = 15, RULE_string = 16, 
		RULE_typeDefinitionPart = 17, RULE_typeDefinition = 18, RULE_functionType = 19, 
		RULE_procedureType = 20, RULE_type_ = 21, RULE_simpleType = 22, RULE_scalarType = 23, 
		RULE_subrangeType = 24, RULE_typeIdentifier = 25, RULE_structuredType = 26, 
		RULE_unpackedStructuredType = 27, RULE_stringtype = 28, RULE_arrayType = 29, 
		RULE_typeList = 30, RULE_indexType = 31, RULE_componentType = 32, RULE_recordType = 33, 
		RULE_fieldList = 34, RULE_fixedPart = 35, RULE_recordSection = 36, RULE_variantPart = 37, 
		RULE_tag = 38, RULE_variant = 39, RULE_setType = 40, RULE_baseType = 41, 
		RULE_fileType = 42, RULE_pointerType = 43, RULE_classType = 44, RULE_classBody = 45, 
		RULE_classMemberSection = 46, RULE_classMember = 47, RULE_visibility = 48, 
		RULE_methodDecl = 49, RULE_methodQualifier = 50, RULE_methodKind = 51, 
		RULE_interfaceType = 52, RULE_interfaceGuid = 53, RULE_interfaceBody = 54, 
		RULE_variableDeclarationPart = 55, RULE_variableDeclaration = 56, RULE_procedureAndFunctionDeclarationPart = 57, 
		RULE_procedureOrFunctionDeclaration = 58, RULE_procedureDeclaration = 59, 
		RULE_functionDeclaration = 60, RULE_constructorDeclaration = 61, RULE_destructorDeclaration = 62, 
		RULE_qualifiedMethodName = 63, RULE_formalParameterList = 64, RULE_formalParameterSection = 65, 
		RULE_parameterGroup = 66, RULE_identifierList = 67, RULE_constList = 68, 
		RULE_resultType = 69, RULE_statement = 70, RULE_unlabelledStatement = 71, 
		RULE_simpleStatement = 72, RULE_breakStatement = 73, RULE_continueStatement = 74, 
		RULE_assignmentStatement = 75, RULE_ioStatement = 76, RULE_expressionList = 77, 
		RULE_inheritedStatement = 78, RULE_procedureStatement = 79, RULE_actualParameter = 80, 
		RULE_parameterwidth = 81, RULE_parameterList = 82, RULE_gotoStatement = 83, 
		RULE_emptyStatement_ = 84, RULE_empty_ = 85, RULE_structuredStatement = 86, 
		RULE_compoundStatement = 87, RULE_statements = 88, RULE_conditionalStatement = 89, 
		RULE_ifStatement = 90, RULE_caseStatement = 91, RULE_caseListElement = 92, 
		RULE_repetetiveStatement = 93, RULE_whileStatement = 94, RULE_repeatStatement = 95, 
		RULE_forStatement = 96, RULE_forList = 97, RULE_initialValue = 98, RULE_finalValue = 99, 
		RULE_withStatement = 100, RULE_recordVariableList = 101, RULE_expression = 102, 
		RULE_relationaloperator = 103, RULE_simpleExpression = 104, RULE_additiveoperator = 105, 
		RULE_term = 106, RULE_multiplicativeoperator = 107, RULE_signedFactor = 108, 
		RULE_factor = 109, RULE_unsignedConstant = 110, RULE_functionDesignator = 111, 
		RULE_variable = 112, RULE_variableSuffix = 113, RULE_set_ = 114, RULE_elementList = 115, 
		RULE_element = 116;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "usesUnitsPart", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
			"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "functionType", 
			"procedureType", "type_", "simpleType", "scalarType", "subrangeType", 
			"typeIdentifier", "structuredType", "unpackedStructuredType", "stringtype", 
			"arrayType", "typeList", "indexType", "componentType", "recordType", 
			"fieldList", "fixedPart", "recordSection", "variantPart", "tag", "variant", 
			"setType", "baseType", "fileType", "pointerType", "classType", "classBody", 
			"classMemberSection", "classMember", "visibility", "methodDecl", "methodQualifier", 
			"methodKind", "interfaceType", "interfaceGuid", "interfaceBody", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"procedureDeclaration", "functionDeclaration", "constructorDeclaration", 
			"destructorDeclaration", "qualifiedMethodName", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "identifierList", "constList", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"breakStatement", "continueStatement", "assignmentStatement", "ioStatement", 
			"expressionList", "inheritedStatement", "procedureStatement", "actualParameter", 
			"parameterwidth", "parameterList", "gotoStatement", "emptyStatement_", 
			"empty_", "structuredStatement", "compoundStatement", "statements", "conditionalStatement", 
			"ifStatement", "caseStatement", "caseListElement", "repetetiveStatement", 
			"whileStatement", "repeatStatement", "forStatement", "forList", "initialValue", 
			"finalValue", "withStatement", "recordVariableList", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "variable", 
			"variableSuffix", "set_", "elementList", "element"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ABSTRACT'", "'AND'", "'ARRAY'", "'AS'", "'BEGIN'", "'BOOLEAN'", 
			"'BREAK'", "'CASE'", "'CHAR'", "'CHR'", "'CLASS'", "'CONST'", "'CONSTRUCTOR'", 
			"'CONTINUE'", "'DESTRUCTOR'", "'DIV'", "'DO'", "'DOWNTO'", "'DYNAMIC'", 
			"'ELSE'", "'END'", "'FALSE'", "'FILE'", "'FOR'", "'FUNCTION'", "'GOTO'", 
			"'IF'", "'IMPLEMENTATION'", "'IN'", "'INHERITED'", "'INTEGER'", "'INTERFACE'", 
			"'IS'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'OVERRIDE'", 
			"'PACKED'", "'PRIVATE'", "'PROCEDURE'", "'PROGRAM'", "'PROTECTED'", "'PUBLIC'", 
			"'PUBLISHED'", "'READ'", "'READLN'", "'REAL'", "'RECORD'", "'REPEAT'", 
			"'RESULT'", "'SELF'", "'SET'", "'SHL'", "'SHR'", "'STRICT'", "'STRING'", 
			"'THEN'", "'TO'", "'TRUE'", "'TYPE'", "'UNIT'", "'UNTIL'", "'USES'", 
			"'VAR'", "'VIRTUAL'", "'WHILE'", "'WITH'", "'WRITE'", "'WRITELN'", "'XOR'", 
			"'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", "':'", "'='", "'<>'", 
			"'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", "'(.'", "']'", "'.)'", 
			"'^'", "'@'", "'..'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ABSTRACT", "AND", "ARRAY", "AS", "BEGIN", "BOOLEAN", "BREAK", 
			"CASE", "CHAR", "CHR", "CLASS", "CONST", "CONSTRUCTOR", "CONTINUE", "DESTRUCTOR", 
			"DIV", "DO", "DOWNTO", "DYNAMIC", "ELSE", "END", "FALSE", "FILE", "FOR", 
			"FUNCTION", "GOTO", "IF", "IMPLEMENTATION", "IN", "INHERITED", "INTEGER", 
			"INTERFACE", "IS", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "OVERRIDE", 
			"PACKED", "PRIVATE", "PROCEDURE", "PROGRAM", "PROTECTED", "PUBLIC", "PUBLISHED", 
			"READ", "READLN", "REAL", "RECORD", "REPEAT", "RESULT", "SELF", "SET", 
			"SHL", "SHR", "STRICT", "STRING", "THEN", "TO", "TRUE", "TYPE", "UNIT", 
			"UNTIL", "USES", "VAR", "VIRTUAL", "WHILE", "WITH", "WRITE", "WRITELN", 
			"XOR", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", 
			"EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", 
			"LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOTDOT", "DOT", "IDENT", 
			"STRING_LITERAL", "NUM_INT", "NUM_REAL", "WS", "COMMENT_1", "COMMENT_2", 
			"COMMENT_3"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(234);
			programHeading();
			setState(235);
			block();
			setState(236);
			match(DOT);
			setState(237);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(253);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(239);
				match(PROGRAM);
				setState(240);
				identifier();
				setState(245);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(241);
					match(LPAREN);
					setState(242);
					identifierList();
					setState(243);
					match(RPAREN);
					}
				}

				setState(247);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(249);
				match(UNIT);
				setState(250);
				identifier();
				setState(251);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public TerminalNode RESULT() { return getToken(delphiParser.RESULT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(255);
			_la = _input.LA(1);
			if ( !(_la==RESULT || _la==IDENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
